# tree-sitter-ec

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  _basic-entries.txt.bak  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  readme.md  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ec.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ec/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterEntryCompiler/: ec.h
bindings/swift/TreeSitterEntryCompilerTests/: TreeSitterEntryCompilerTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: entities-basic.txt  entries-modern.txt  settings-basic.txt
